hphp/hack/test/typecheck/array_map2.php.like_types.exp
File "array_map2.php", line 8, characters 13-14:
Invalid argument (Typing[4110])
File "stdlib/builtins_array.hhi", line 115, characters 10-18:
Expected (function([unresolved], [unresolved]): [unresolved])
File "array_map2.php", line 4, characters 3-23:
But got dynamic because it is an unenforceable type
